--- a/applications/ws/local/client/yathra/rentCars/about.html
+++ b/applications/ws/local/client/yathra/rentCars/about.html
@@ -6,28 +6,12 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <title>TAB - Take A Break</title>
-      <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <!-- Custom CSS -->
-      <link href="css/freelancer.css" rel="stylesheet">
-      <!-- Custom Fonts -->
-      <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="css/tab.css" rel="stylesheet">
-      <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
-      <link rel="stylesheet" href="css/jquery-ui.css">
-      <style type="text/css"></style>
-      <style type="text/css"></style>
+      <link href="../css/bootstrap.min.css" rel="stylesheet">
+      <link href="../css/freelancer.css" rel="stylesheet">
+      <link href="../css/tab.css" rel="stylesheet">
+      <link rel="stylesheet" href="../css/jquery-ui.css">
    </head>
    <body id="page-top" class="index" >
-      <!-- Navigation -->
-      <!-- About Section -->
       <section class="success" id="about">
          <div class="container">
          <div class="row">
@@ -98,28 +82,7 @@
             </div>
          </div>
       </footer>
-      <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-      <div class="scroll-top page-scroll visible-xs visible-sm">
-         <a class="btn btn-primary" href="#page-top">
-         <span class="glyphicon glyphicon-chevron-up">
-         </a>
-      </div>
-      <!-- jQuery -->
-      <script src="js/jquery.js"></script>
-      <!-- Bootstrap Core JavaScript -->
-      <script src="js/bootstrap.min.js"></script>
-      <!-- Plugin JavaScript -->
-      <script src="js/jquery.easing.min.js"></script>
-      <script src="js/classie.js"></script>
-      <script src="js/cbpAnimatedHeader.js"></script>
-      <!-- Contact Form JavaScript -->
-      <script src="js/jqBootstrapValidation.js"></script>
-      <script src="js/contact_me.js"></script>
-      <!-- Custom Theme JavaScript -->
-      <script src="js/freelancer.js"></script>
-      <!-- MY JS -->
-      <script src="js/jquery-ui.js"></script>
-      <script src="js/index.js"> </script>
+      <script src="../js/general/jquery.js"></script>
       <script type="text/javascript"> 
          var width = $(window).width();
               if (width >= 850) {
