--- a/applications/ws/local/client/yathra/rentCars/confirmBooking.html
+++ b/applications/ws/local/client/yathra/rentCars/confirmBooking.html
@@ -6,78 +6,37 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <title>TAB - Take A Break</title>
-      <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="../css/bootstrap.min.css" rel="stylesheet">
+      <link href="../css/freelancer.css" rel="stylesheet">
+      <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <link href="../css/tab.css" rel="stylesheet">
+      <link rel="stylesheet" href="../css/jquery-ui.css">
+
+<link href="../css/bootstrap.min.css" rel="stylesheet">
       <!-- Custom CSS -->
-      <link href="css/freelancer.css" rel="stylesheet">
+      <link href="../css/freelancer.css" rel="stylesheet">
       <!-- Custom Fonts -->
-      <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="css/tab.css" rel="stylesheet">
+      <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <link href="../css/tab.css" rel="stylesheet">
       <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
       <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
-      <link rel="stylesheet" href="css/jquery-ui.css">
-      <style type="text/css"></style>
-      <style type="text/css"></style>
+      <link rel="stylesheet" href="../css/jquery-ui.css">
    </head>
    <body id="page-top" class="index" >
-      <!-- Navigation -->
-      <nav class="navbar navbar-default navbar-fixed-top">
-         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="#page-top">TAB</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
-               <ul class="nav navbar-nav navbar-left">
-                  <li class="page-scroll">
-                     <a href="index.html">HOME</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="userAccount.html">SIGN UP/SIGN IN</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="#offers">OFFERS FOR YOU</a>
-                  </li>
-               </ul>
-               <ul class="nav navbar-nav navbar-right">
-                  <li class="hidden active">
-                     <a href="#page-top"></a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="about.html">About</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="#contact">Contact</a>
-                  </li>
-               </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-         </div>
-         <!-- /.container-fluid -->
-      </nav>
+      <header class=".tab-header navbar-fixed-top">
+         <div class="container ">
+		 <div class="col-xs-2">
+		    <h3><i class="glyphicon glyphicon-arrow-left text-primary"></i></h3>
+		 </div>
+		 <div class="col-xs-8">
+		    <h3>Confirm</h3>
+		 </div>
+	</div>
+      </header>
       <!-- Contact Section -->
       <section id="contact" >
          <div class="container">
-            <div class="row">
-               <div class="col-lg-12 text-center">
-                  <h2>Contact US</h2>
-                  <br/>
-               </div>
-            </div>
-            <div class="row">
+            <div class="row"><br/><br/>
                <div class="col-lg-8 col-lg-offset-2">
                   <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                   <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
@@ -115,22 +74,11 @@
                            </p>
                         </div>
                      </div>
-                     <div class="row control-group error">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                           <label>Message</label>
-                           <textarea rows="3" class="form-control" placeholder="Message" id="message" required="" data-validation-required-message="Please enter a message." aria-invalid="true"></textarea>
-                           <p class="help-block text-danger">
-                           <ul class="alert" role="alert">
-                              <li>Please enter a message.</li>
-                           </ul>
-                           </p>
-                        </div>
-                     </div>
                      <br>
                      <div id="success"></div>
                      <div class="row">
                         <div class="form-group col-xs-12">
-                           <button type="submit" class="btn btn-success btn-lg">Send</button>
+                           <button type="submit" class="btn btn-success btn-lg btn-block">Confirm Booking</button>
                         </div>
                      </div>
                   </form>
@@ -200,30 +148,16 @@
          <span class="glyphicon glyphicon-chevron-up">
          </a>
       </div>
-      <!-- jQuery -->
-      <script src="js/jquery.js"></script>
-      <!-- Bootstrap Core JavaScript -->
-      <script src="js/bootstrap.min.js"></script>
-      <!-- Plugin JavaScript -->
-      <script src="js/jquery.easing.min.js"></script>
-      <script src="js/classie.js"></script>
-      <script src="js/cbpAnimatedHeader.js"></script>
-      <!-- Contact Form JavaScript -->
-      <script src="js/jqBootstrapValidation.js"></script>
-      <script src="js/contact_me.js"></script>
-      <!-- Custom Theme JavaScript -->
-      <script src="js/freelancer.js"></script>
-      <!-- MY JS -->
-      <script src="js/jquery-ui.js"></script>
-      <script src="js/index.js"> </script>
-      <script type="text/javascript"> 
-         var width = $(window).width();
-              if (width >= 850) {
-                  $('.websiteView').show();
-              } else {
-                  $('.websiteView').hide();
-              }
-         
-      </script>
+      <script src="../js/general/jquery.js"></script>
+      <script src="../js/general/bootstrap.min.js"></script>
+      <script src="../js/general/jquery.easing.min.js"></script>
+      <script src="../js/general/classie.js"></script>
+      <script src="../js/general/cbpAnimatedHeader.js"></script>
+      <script src="../js/general/contact_me.js"></script>
+      <script src="../js/general/freelancer.js"></script>
+      <script src="../js/rentCars/confirm.js"></script>
+      <script src="../js/general/bootstrap.min.js"></script>
+      <script src="../js/general/jquery-ui.js"></script>
+      <script src="../js/general/jqBootstrapValidation.js"></script>
    </body>
 </html>
