--- a/applications/ws/local/client/yathra/rentCars/contact.html
+++ b/applications/ws/local/client/yathra/rentCars/contact.html
@@ -6,68 +6,16 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <title>TAB - Take A Break</title>
-      <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <!-- Custom CSS -->
-      <link href="css/freelancer.css" rel="stylesheet">
-      <!-- Custom Fonts -->
-      <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="css/tab.css" rel="stylesheet">
-      <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
-      <link rel="stylesheet" href="css/jquery-ui.css">
-      <style type="text/css"></style>
-      <style type="text/css"></style>
+      <link href="../css/bootstrap.min.css" rel="stylesheet">
+      <link href="../css/freelancer.css" rel="stylesheet">
+      <link href="../css/tab.css" rel="stylesheet">
+      <link rel="stylesheet" href="../css/jquery-ui.css">
    </head>
    <body id="page-top" class="index" >
-      <!-- Navigation -->
-      <!--<nav class="navbar navbar-default navbar-fixed-top">
-         <div class="container">
-            <div class="navbar-header page-scroll">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="#page-top">TAB</a>
-            </div>
-            <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
-               <ul class="nav navbar-nav navbar-left">
-                  <li class="page-scroll">
-                     <a href="index.html">HOME</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="userAccount.html">SIGN UP/SIGN IN</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="#offers">OFFERS FOR YOU</a>
-                  </li>
-               </ul>
-               <ul class="nav navbar-nav navbar-right">
-                  <li class="hidden active">
-                     <a href="#page-top"></a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="about.html">About</a>
-                  </li>
-                  <li class="page-scroll">
-                     <a href="contact.html">Contact</a>
-                  </li>
-               </ul>
-            </div>
-         </div>
-      </nav>-->
-      <header class=".tab-header navbar-fixed-top">
+     <header class=".tab-header navbar-fixed-top mobile">
          <div class="container ">
             <div class="col-sm-12">
-               <h3>Confirm car</h3>
+               <h3>Contact us</h3>
             </div>
          </div>
       </header>
@@ -112,11 +60,22 @@
                            </p>
                         </div>
                      </div>
+                     <div class="row control-group error">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                           <label>Message</label>
+                           <textarea rows="3" class="form-control" placeholder="Message" id="message" required="" data-validation-required-message="Please enter a message." aria-invalid="true"></textarea>
+                           <p class="help-block text-danger">
+                           <ul class="alert" role="alert">
+                              <li>Please enter a message.</li>
+                           </ul>
+                           </p>
+                        </div>
+                     </div>
                      <br>
                      <div id="success"></div>
                      <div class="row">
                         <div class="form-group col-xs-12">
-                           <button type="submit" class="btn btn-success btn-lg btn-block">Confirm Booking</button>
+                           <button type="submit" class="btn btn-success btn-lg btn-block">Send</button>
                         </div>
                      </div>
                   </form>
@@ -180,28 +139,15 @@
             </div>
          </div>
       </footer>
-      <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-      <div class="scroll-top page-scroll visible-xs visible-sm">
-         <a class="btn btn-primary" href="#page-top">
-         <span class="glyphicon glyphicon-chevron-up">
-         </a>
-      </div>
-      <!-- jQuery -->
-      <script src="js/jquery.js"></script>
-      <!-- Bootstrap Core JavaScript -->
-      <script src="js/bootstrap.min.js"></script>
-      <!-- Plugin JavaScript -->
-      <script src="js/jquery.easing.min.js"></script>
-      <script src="js/classie.js"></script>
-      <script src="js/cbpAnimatedHeader.js"></script>
-      <!-- Contact Form JavaScript -->
-      <script src="js/jqBootstrapValidation.js"></script>
-      <script src="js/contact_me.js"></script>
-      <!-- Custom Theme JavaScript -->
-      <script src="js/freelancer.js"></script>
-      <!-- MY JS -->
-      <script src="js/jquery-ui.js"></script>
-      <script src="js/index.js"> </script>
+      <script src="../js/general/jquery.js"></script>
+      <script src="../js/general/bootstrap.min.js"></script>
+      <script src="../js/general/jquery.easing.min.js"></script>
+      <script src="../js/general/classie.js"></script>
+      <script src="../js/general/cbpAnimatedHeader.js"></script>
+      <script src="../js/general/jqBootstrapValidation.js"></script>
+      <script src="../js/general/contact_me.js"></script>
+      <script src="../js/general/freelancer.js"></script>
+      <script src="../js/general/jquery-ui.js"></script>
       <script type="text/javascript"> 
          var width = $(window).width();
               if (width >= 850) {
@@ -209,6 +155,7 @@
               } else {
                   $('.websiteView').hide();
               }
+	$('.alert').hide();
          
       </script>
    </body>
