--- a/applications/ws/local/client/yathra/rentCars/orderDetails.html
+++ b/applications/ws/local/client/yathra/rentCars/orderDetails.html
@@ -6,92 +6,78 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <title>TAB - Take A Break</title>
-      <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <!-- Custom CSS -->
-      <link href="css/freelancer.css" rel="stylesheet">
-      <!-- Custom Fonts -->
-      <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
-      <link rel="stylesheet" href="css/jquery-ui.css">
-      <style type="text/css"></style>
-      <style type="text/css"></style>
+      <link href="../css/bootstrap.min.css" rel="stylesheet">
+      <link href="../css/freelancer.css" rel="stylesheet">
+      <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="../css/jquery-ui.css">
+      <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
    </head>
    <body id="page-top" class="index">
-      <header class=".tab-header navbar-fixed-top">
+      <header class=".tab-header navbar-fixed-top mobile hide">
          <div class="container ">
-		 <div class="col-sm-12">
+		 <div class="col-xs-2">
+		    <h3><i class="glyphicon glyphicon-arrow-left text-primary"></i></h3>
+		 </div>
+		 <div class="col-xs-8">
+		    <h3>Car Details</h3>
+		 </div>
+	</div>
+      </header>
+       <header class=".tab-header navbar-fixed-top website hide">
+         <div class="container ">
+		 <div class="col-xs-12">
 		    <h3>Car Details</h3>
 		 </div>
 	</div>
       </header>
       <div class="container "><br/><br/>
          <div class="col-sm-12 text-center ">
-            <!--  ACTUAL BODY OF THE WEBSITE -->
-            <!--  ACTUAL BODY OF THE WEBSITE -->
-            <div class="panel panel-white" id="row1">
-               <div class="panel-body text-center">
                   <div class="row col-sm-12 ">
                      <div class="col-sm-4"></div>
 		     <div class="col-sm-4">
                         <div href="#portfolioModal1 col-md-6" class="" data-toggle="modal">
                            <img src="" class="img-responsive carimage" id="1" alt="">
                         </div>
-                        <div class="title text-primary col-sm-6 carname"></div>
+                        <div class="title text-primary col-sm-6 carname text-primary"></div>
                      </div>
 		     <div class="col-sm-4"></div>
                   </div>
                   <div class="row col-sm-12">
-		     <div class="col-sm-2"></div>
-		     <div class="col-sm-8"><br/>
-		             <table class="table text-left">
-		                <tbody>
-		                   <tr>
-		                      <td>Car Choosen:</td>
-		                      <td>Indica</td>
-		                   </tr>
-		                   <tr>
-		                      <td>Fuel Type:</td>
-		                      <td>Deisel</td>
-		                   </tr>
-		                   <tr>
-		                      <td>PickUp From:</td>
-		                      <td>Bangalore</td>
-		                   </tr>
-		                   <tr>
-		                      <td>Travelling To:</td>
-		                      <td>Mangalore	</td>
-		                   </tr>
-		                   <tr>
-		                      <td>Distance Allowed/Day:</td>
-		                      <td>300</td>
-		                   </tr>
-		                   <tr>
-		                      <td>Minimum Fare/Day:</td>
-		                      <td>3000 rs</td>
-		                   </tr>
-				   <tr>
-		                      <td>Driver Bata Charges/Day:</td>
-		                      <td>300 rs</td>
-		                   </tr>
-				   <tr>
-		                      <td>Coupons Applied:</td>
-		                      <td>none</td>
-		                   </tr>
-		                </tbody>
-		             </table>
+		     <div class="col-sm-12"><br/>
+				<ul class="list-group text-left">
+				  <hr/><div class="row">
+					<div class="col-xs-6 text-info">Fuel Type:</div>
+					<div class="col-xs-6">Diesel</div>
+				  </div><hr/>
+				  <div class="row">
+					<div class="col-xs-6 text-info">PickUp From:</div>
+					<div class="col-xs-6">Bangalore</div>
+				  </div><hr/>
+				  <div class="row">
+					<div class="col-xs-6 text-info">Travelling To:</div>
+					<div class="col-xs-6">Mangalore</div>
+				  </div><hr/>
+				  <div class="row">
+					<div class="col-xs-6 text-info">Distance Allowed/Day:</div>
+					<div class="col-xs-6">300km</div>
+				  </div><hr/>
+				  <div class="row">
+					<div class="col-xs-6 text-info">Minimum Fare/Day:</div>
+					<div class="col-xs-6"><i class="fa fa-inr" style="font-size:15px"> 3000</i></div>
+				  </div><hr/>
+				  <div class="row">
+					<div class="col-xs-6 text-info">Driver Bata Charges/Day:</div>
+					<div class="col-xs-6"><i class="fa fa-inr" style="font-size:15px"> 300</i></div>
+				  </div><hr/>
+				  <div class="row">
+					<div class="col-xs-6 text-info">Coupons Applied:</div>
+					<div class="col-xs-6">None</div>
+				  </div><hr/>
+				</ul>
 			</div>
-			<div class="col-sm-2"></div>
                   </div>
 		  <div class="row col-sm-12 ">
-			<button id="search_car" type="button" class="btn btn-info active bookCarButton">Book Car</button>
+			<button id="search_car" type="button" class="btn btn-success btn-lg btn-block bookCarButton">Confirm Car</button><hr/>
 		  </div>
                </div>
             </div>
@@ -159,22 +145,17 @@
          <span class="glyphicon glyphicon-chevron-up">
          </a>
       </div>
-      <!-- jQuery -->
-      <script src="js/jquery.js"></script>
-      <!-- Bootstrap Core JavaScript -->
-      <script src="js/bootstrap.min.js"></script>
-      <!-- Plugin JavaScript -->
-      <script src="js/jquery.easing.min.js"></script>
-      <script src="js/classie.js"></script>
-      <script src="js/cbpAnimatedHeader.js"></script>
-      <!-- Contact Form JavaScript -->
-      <script src="js/jqBootstrapValidation.js"></script>
-      <script src="js/contact_me.js"></script>
-      <!-- Custom Theme JavaScript -->
-      <script src="js/freelancer.js"></script>
+      <script src="../js/general/jquery.js"></script>
+      <script src="../js/general/bootstrap.min.js"></script>
+      <script src="../js/general/jquery.easing.min.js"></script>
+      <script src="../js/general/classie.js"></script>
+      <script src="../js/general/cbpAnimatedHeader.js"></script>
+      <script src="../js/general/jqBootstrapValidation.js"></script>
+      <script src="../js/general/contact_me.js"></script>
+      <script src="../js/general/freelancer.js"></script>
       <!-- MY JS -->
-      <script src="js/jquery-ui.js"></script>
-      <script src="js/orderDetails.js"> </script>
+      <script src="../js/general/jquery-ui.js"></script>
+      <script src="../js/rentCars/orderDetails.js"> </script>
 <script type="text/javascript"> 
 var width = $(window).width();
      if (width >= 850) {
